# opendataloader-pdf

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  PR_MESSAGE.md  README.md  README.zh-CN.md  README.zh.md  SUPPORT.md  fix.patch  install_ocr.bat  install_tatr.bat  options.json  package.json  pom.xml  schema.json
.claude-plugin/: marketplace.json
.claude/agents/: perf-researcher.md  triage-analyzer.md
.claude/memory/: perf-history.md
.claude/skills/: bench-debug.md  bench.md  improve-perf.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: ai-issue-1-triage.yml  ai-issue-2-analyze.yml  ai-issue-3-fix.yml  ai-issue-test.yml  benchmark.yml  beneissue-workflow.yml  build.yml  coverage.yml  maven.yml  pr-review.yml  preflight.yml  release-java.yml  release-python-wrapper.yml  release.yml  skill-drift-check.yml  skill-evals.yml  skill-smoke-test.yml  sync-docs.yml  test-benchmark.yml
LICENSE_TEMPLATE/: license.txt
benchmarks/config/: scorecard-weights-v0.json
benchmarks/suites/: production-v0-doc-ids.txt
build-scripts/: fetch_shaded_jar.py  set_version.py
content/docs/: accessibility-compliance.mdx  accessibility-glossary.mdx  ai-safety.mdx  cli-options-reference.mdx  faq.mdx  hybrid-mode.mdx  json-schema.mdx  license.mdx  meta.json  open-source-pdf-ua.mdx  quick-start-java.mdx  (+7 more)
docs/: AI_SAFETY.md  hybrid-mode-tasks.md  tagged_PDF.md
java/: pom.xml
layout-recognition/: pom.xml
python/: pyproject.toml  requirements.txt
python/opendataloader-pdf/: .gitignore  Dockerfile.hybrid  Dockerfile.hybrid-gpu  README.md  build.sh  hatch_build.py  pyproject.toml  setup.py
python/opendataloader-pdf-mcp/: README.md  pyproject.toml
python/opendataloader-pdf-mcp/src/opendataloader_pdf_mcp/: jobs.py  mineru.py  server.py
python/opendataloader-pdf-mcp/tests/: conftest.py  test_convert_pdf.py  test_jobs.py  test_mineru.py  test_server_async_tools.py
python/opendataloader-pdf/src/opendataloader_pdf/: __init__.py  cli_options_generated.py  convert_generated.py  hybrid_server.py  markdown_fallback.py  runner.py  wrapper.py
python/opendataloader-pdf/test/: test_wrapper.py
python/opendataloader-pdf/tests/: conftest.py  test_cli_options.py  test_convert_args.py  test_hybrid_server_concurrency.py  test_hybrid_server_nonblocking.py  test_hybrid_server_ocr_options.py  test_hybrid_server_partial_success.py  test_hybrid_server_picture_description.py  test_hybrid_server_upload_limits.py  test_markdown_fallback.py  test_runner.py  test_wrapper.py
resources/: 1901.03003.html  1901.03003.json  1901.03003.md
scripts/: bench-production-v0.sh  bench.sh  build-all.sh  build-java.mjs  build-python.sh  docling_fast_server.py  export-options.mjs  generate-options.mjs  generate-schema.mjs  preflight.sh  run-cli.sh  test-python.sh
skills/: README.md
verification/: ci-verify.py
webapp/: README.md  package.json  server.js
(+946 files in other folders)
